{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 396,
  "lineage": "4246fdca-e5b9-4b4d-b88b-45852116baa7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cg-ubuntu-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:347693324467:instance/i-03a61a39dbcceb450",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cg-Glue_Privesc-test-ecs-agent",
            "id": "i-03a61a39dbcceb450",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cg-ec2-key-pair-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089b278c5488a4231",
            "private_dns": "ip-10-10-10-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.125",
            "public_dns": "ec2-54-196-228-160.compute-1.amazonaws.com",
            "public_ip": "54.196.228.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-005349b7737e190c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee86173a905e9c1f",
            "tags": {
              "Name": "cg-linux-ec2-test",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "cg-linux-ec2-test",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "CloudGoat test EC2 Instance Root Device",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "vpc_security_group_ids": [
              "sg-05a521da1bed3c09f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_access_key.cg-run-app_access_key",
            "aws_iam_instance_profile.cg-ec2-instance-profile",
            "aws_iam_role.ec2_profile_role",
            "aws_iam_user.cg-run-app",
            "aws_key_pair.bob-ec2-key-pair",
            "aws_security_group.cg-rds-glue-security-group",
            "aws_subnet.cg-public-subnet-1",
            "aws_vpc.cg-vpc",
            "data.aws_iam_policy_document.ec2_profile_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cg-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:internet-gateway/igw-02b5fae68474dbd9d",
            "id": "igw-02b5fae68474dbd9d",
            "owner_id": "347693324467",
            "tags": {
              "Name": "CloudGoat test Internet Gateway",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "CloudGoat test Internet Gateway",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "dependencies": [
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cg-public-subnet-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:route-table/rtb-0785f250d83cf85f5",
            "id": "rtb-0785f250d83cf85f5",
            "owner_id": "347693324467",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b5fae68474dbd9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CloudGoat test Route Table for Public Subnet",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "CloudGoat test Route Table for Public Subnet",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cg-internet-gateway",
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cg-public-subnet-1-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a227e31d42a5307e",
            "route_table_id": "rtb-0785f250d83cf85f5",
            "subnet_id": "subnet-0ee86173a905e9c1f"
          },
          "dependencies": [
            "aws_internet_gateway.cg-internet-gateway",
            "aws_route_table.cg-public-subnet-route-table",
            "aws_subnet.cg-public-subnet-1",
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cg-public-subnet-2-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a32395c41282330",
            "route_table_id": "rtb-0785f250d83cf85f5",
            "subnet_id": "subnet-0bcd6a1a7c5349df2"
          },
          "dependencies": [
            "aws_internet_gateway.cg-internet-gateway",
            "aws_route_table.cg-public-subnet-route-table",
            "aws_subnet.cg-public-subnet-2",
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cg-rds-glue-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:security-group/sg-05a521da1bed3c09f",
            "description": "CloudGoat test Security Group for EC2 Instance over HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a521da1bed3c09f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cg-rds-glue-test",
            "name_prefix": "",
            "owner_id": "347693324467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cg-rds-glue-test",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "cg-rds-glue-test",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:subnet/subnet-0ee86173a905e9c1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee86173a905e9c1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347693324467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CloudGoat test Public Subnet #1",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "CloudGoat test Public Subnet #1",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "dependencies": [
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:subnet/subnet-0bcd6a1a7c5349df2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcd6a1a7c5349df2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347693324467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CloudGoat test Public Subnet #2",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "CloudGoat test Public Subnet #2",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "dependencies": [
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cg-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:vpc/vpc-0a04c8a95014ce86a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a27a0dbe83a96a03",
            "default_route_table_id": "rtb-00b6036cc110a62f4",
            "default_security_group_id": "sg-0a495b3c59eb01931",
            "dhcp_options_id": "dopt-0f17322c1a6937dde",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a04c8a95014ce86a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b6036cc110a62f4",
            "owner_id": "347693324467",
            "tags": {
              "Name": "CloudGoat test VPC",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            },
            "tags_all": {
              "Name": "CloudGoat test VPC",
              "Scenario": "Glue_Privesc",
              "Stack": "CloudGoat"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:vpc-endpoint/vpce-0780b5a7a1c507a29",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0780b5a7a1c507a29",
            "ip_address_type": "ipv4",
            "owner_id": "347693324467",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a495b3c59eb01931"
            ],
            "service_name": "com.amazonaws.us-east-1.glue",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "dependencies": [
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347693324467:vpc-endpoint/vpce-04a59f2a76795e497",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-04a59f2a76795e497",
            "owner_id": "347693324467",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0785f250d83cf85f5"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a04c8a95014ce86a"
          },
          "dependencies": [
            "aws_internet_gateway.cg-internet-gateway",
            "aws_route_table.cg-public-subnet-route-table",
            "aws_vpc.cg-vpc"
          ]
        }
      ]
    }
  ]
}